# simple-chatbot

./: pyproject.toml
src/chatbot/: main.py
